@@ -45,6 +45,7 @@ import java.io.StringReader;
 import java.lang.reflect.InvocationTargetException;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -112,7 +113,7 @@ import javax.xml.parsers.ParserConfigurationException;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang.SystemUtils;
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.http.HttpEntity;
 import org.apache.http.NameValuePair;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
@@ -152,6 +153,7 @@ import prerna.algorithm.api.SemossDataType;
 import prerna.auth.User;
 import prerna.auth.utils.SecurityEngineUtils;
 import prerna.auth.utils.SecurityProjectUtils;
+import prerna.auth.utils.UserAssetUtils;
 import prerna.cluster.util.ClusterUtil;
 import prerna.cluster.util.ZKClient;
 import prerna.date.SemossDate;
@@ -2327,14 +2329,6 @@ public final class Utility {
 		 * started running)
 		 */
 
-		// grab the local master engine
-		IDatabaseEngine localMaster = (IDatabaseEngine) DIHelper.getInstance()
-				.getEngineProperty(Constants.LOCAL_MASTER_DB);
-		if (localMaster == null) {
-			classLogger.info(">>>>>>>> Unable to find local master database in DIHelper.");
-			return;
-		}
-
 		// generate the appropriate query to execute on the local master engine to get
 		// the time stamp
 		String smssFile = DIHelper.getInstance().getEngineProperty(engineId + "_" + Constants.STORE) + "";
@@ -2360,9 +2354,6 @@ public final class Utility {
 		Date rdbmsDate = MasterDatabaseUtility.getEngineDate(engineId);
 		File owlFile = SmssUtilities.getOwlFile(smssFile, prop);
 		if (owlFile == null) {
-			classLogger.warn("Engine " + SmssUtilities.getUniqueName(prop) + " does not have an OWL file");
-			classLogger.warn("Engine " + SmssUtilities.getUniqueName(prop) + " does not have an OWL file");
-			classLogger.warn("Engine " + SmssUtilities.getUniqueName(prop) + " does not have an OWL file");
 			classLogger.warn("Engine " + SmssUtilities.getUniqueName(prop) + " does not have an OWL file");
 			return;
 		}
@@ -2513,7 +2504,12 @@ public final class Utility {
 		return EngineProxyFactory.createGuardedProject(project);
 	}
 
-	public static IProject getUserAssetWorkspaceProject(String projectId, boolean isAsset) {
+	/**
+	 * 
+	 * @param projectId
+	 * @return
+	 */
+	public static IProject getUserAssetProject(String projectId) {
 		IProject project = null;
 
 		if (DIHelper.getInstance().getProjectProperty(projectId) != null) {
@@ -2522,10 +2518,10 @@ public final class Utility {
 			// Acquire the lock on the engine,
 			// don't want several calls to try and load the engine at the same
 			// time
-			classLogger.info("Applying lock for user asset/workspace " + projectId);
+			classLogger.info("Applying lock for user asset project " + projectId);
 			ReentrantLock lock = ProjectSyncUtility.getProjectLock(projectId);
 			lock.lock();
-			classLogger.info("User asset/workspace " + projectId + " is locked");
+			classLogger.info("User asset project " + projectId + " is locked");
 
 			try {
 				// Need to do a double check here,
@@ -2539,16 +2535,11 @@ public final class Utility {
 				// TODO >>>timb: need to pull sec and lmd each time. They also need
 				// correct jdbcs...
 				if (ClusterUtil.IS_CLUSTER) {
-					ClusterUtil.pullUserWorkspace(projectId, isAsset, false);
+					ClusterUtil.pullUserAsset(projectId, false);
 				}
 
 				// Now that the app has been pulled, grab the smss file
-				String folderName = null;
-				if (isAsset) {
-					folderName = "Asset";
-				} else {
-					folderName = "Workplace";
-				}
+				String folderName = UserAssetUtils.ASSET_APP_NAME;
 				String smssFile = Utility.getDIHelperProperty(Constants.BASE_FOLDER) + "/" + Constants.USER_FOLDER + "/"
 						+ SmssUtilities.getUniqueName(folderName, projectId) + ".smss";
 				// Start up the engine using the details in the smss
@@ -2556,12 +2547,12 @@ public final class Utility {
 					// actual load engine process
 					project = Utility.loadProject(smssFile, Utility.loadProperties(Utility.normalizePath(smssFile)));
 				} else {
-					classLogger.debug("There is no SMSS File for the user asset/workspace " + projectId + "...");
+					classLogger.debug("There is no SMSS File for the user asset project " + projectId + "...");
 				}
 			} finally {
 				// Make sure to unlock now
 				lock.unlock();
-				classLogger.info("User asset/workspace " + projectId + " is unlocked");
+				classLogger.info("User asset project " + projectId + " is unlocked");
 			}
 		}
 
@@ -3630,9 +3621,20 @@ public final class Utility {
 	}
 
 	public static String decodeURIComponent(String s) {
+		return decodeURIComponent(s, true);
+	}
+
+	public static String decodeURIComponent(String s, boolean performCheck) {
 		if (s == null) {
 			return null;
 		}
+		if (performCheck) {
+			final Pattern PERCENT_ENCODED = Pattern.compile("%[0-9A-Fa-f]{2}");
+			if (!PERCENT_ENCODED.matcher(s).find()) {
+				return s; // can't be percent-encoded, return as-is
+			}
+		}
+
 		String newS = s.replaceAll("\\%20", "+").replaceAll("\\%21", "!").replaceAll("\\%27", "'")
 				.replaceAll("\\%28", "(").replaceAll("\\%29", ")").replaceAll("\\%7E", "~");
 		s = URLDecoder.decode(newS, StandardCharsets.UTF_8);
@@ -3721,6 +3723,31 @@ public final class Utility {
 		normalizedString = normalizedString.replace("\\", "/");
 
 		return normalizedString;
+	}
+
+	/**
+	 *
+	 * @param filePaths
+	 * @return
+	 */
+	public static List<String> normalizeFilePaths(List<String> filePaths) {
+		if (filePaths == null) {
+			throw new NullPointerException("File paths cannot be null");
+		}
+
+		List<String> normalizedPaths = new ArrayList<>(filePaths.size());
+		for (String rawFilePath : filePaths) {
+			if (rawFilePath == null) {
+				throw new NullPointerException("File path cannot be null");
+			}
+
+			String normalizedPath = normalizePath(rawFilePath.trim());
+			if (normalizedPath == null || normalizedPath.isEmpty()) {
+				throw new IllegalArgumentException("Must provide a valid filePath");
+			}
+			normalizedPaths.add(normalizedPath);
+		}
+		return normalizedPaths;
 	}
 
 	/**
@@ -4714,7 +4741,7 @@ public final class Utility {
 		// derived from the social.properties redirect value
 		try {
 			String redirectUrlStr = SocialPropertiesUtil.getInstance().getProperty("redirect");
-			URL redirectUrl = new URL(redirectUrlStr);
+			URL redirectUrl = new URI(redirectUrlStr).toURL();
 			String protocol = redirectUrl.getProtocol();
 			int port = redirectUrl.getPort();
 			String host = redirectUrl.getHost();
@@ -4723,7 +4750,7 @@ public final class Utility {
 			} else {
 				return protocol + "://" + host;
 			}
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException | MalformedURLException e) {
 			classLogger.warn("Invalid redirect URL in social.properties for redirect");
 			classLogger.error(Constants.STACKTRACE, e);
 		}
@@ -6104,9 +6131,10 @@ public final class Utility {
 	}
 
 	/**
-	 * Returns true only if the folder contains at least one direct non-directory file.
-	 * Use this when you specifically need to confirm flat files exist (e.g., validating
-	 * that a folder has been populated with data files, not just sub-folders).
+	 * Returns true only if the folder contains at least one direct non-directory
+	 * file. Use this when you specifically need to confirm flat files exist (e.g.,
+	 * validating that a folder has been populated with data files, not just
+	 * sub-folders).
 	 */
 	public static boolean folderHasAnyFiles(String folderPath) {
 		File folder = new File(folderPath);
@@ -6119,10 +6147,11 @@ public final class Utility {
 	}
 
 	/**
-	 * Returns true if the folder exists and contains any entries — files, sub-directories,
-	 * hidden files, dot files, etc. Use this when you just need to know the folder is
-	 * non-empty regardless of whether its contents are files or directories (e.g., before
-	 * syncing a room folder to cloud storage where the room may store data in sub-directories).
+	 * Returns true if the folder exists and contains any entries — files,
+	 * sub-directories, hidden files, dot files, etc. Use this when you just need to
+	 * know the folder is non-empty regardless of whether its contents are files or
+	 * directories (e.g., before syncing a room folder to cloud storage where the
+	 * room may store data in sub-directories).
 	 */
 	public static boolean folderIsNotEmpty(String folderPath) {
 		File folder = new File(folderPath);
